[gd_scene load_steps=14 format=2]

[ext_resource path="res://Entities/Entities/Machines/ElectricFurnace/ElectricFurnaceEntity.gd" type="Script" id=1]
[ext_resource path="res://Shared/tileset.svg" type="Texture" id=2]
[ext_resource path="res://Systems/Power/PowerReceiver.gd" type="Script" id=3]
[ext_resource path="res://GUI/GUIEntities/GUIComponent.gd" type="Script" id=4]
[ext_resource path="res://Systems/Work/WorkComponent.gd" type="Script" id=5]
[ext_resource path="res://Entities/Entities/Machines/ElectricFurnace/ElectricFurnaceGUI.tscn" type="PackedScene" id=6]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.788945, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 12, 2.5, 1 )
flag_disable_z = true
direction = Vector3( -1, -0.175, 0 )
gravity = Vector3( 0, 98, 0 )
initial_velocity = 67.13
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
color_ramp = SubResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "Powered"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("IdleIndicator:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.572549, 1.4, 0.701961, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Vents:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1.35294, 0.682353, 0.235294, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WorkIndicator:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1.70196, 0.564706, 0.627451, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("IdleIndicator:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.572549, 1.4, 0.701961, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Dial:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Shutdown"
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Vents:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1.35294, 0.682353, 0.235294, 1 ), Color( 1.35294, 0.682353, 0.235294, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WorkIndicator:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Color( 1.70196, 0.564706, 0.627451, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("IdleIndicator:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 0.572549, 1.4, 0.701961, 0 ), Color( 0.572549, 1.4, 0.701961, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Dial:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 225.0, 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Work"
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Vents:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1.35294, 0.682353, 0.235294, 0 ), Color( 1.35294, 0.682353, 0.235294, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WorkIndicator:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1.70196, 0.564706, 0.627451, 0 ), Color( 1.70196, 0.564706, 0.627451, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("IdleIndicator:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Color( 0.572549, 1.4, 0.701961, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Dial:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ 0.0, 225.0 ]
}

[node name="ElectricFurnaceEntity" type="StaticBody2D" groups=[
"gui_entities",
"power_receivers",
"workers",
]]
script = ExtResource( 1 )

[node name="PowerReceiver" type="Node" parent="."]
script = ExtResource( 3 )

[node name="WorkComponent" type="Node" parent="."]
script = ExtResource( 5 )

[node name="GUIComponent" type="Node" parent="."]
script = ExtResource( 4 )
GuiWindow = ExtResource( 6 )

[node name="Furnace" type="Sprite" parent="."]
position = Vector2( 0, -25.5679 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 339, 229, 102, 102 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -25.5679 )
polygon = PoolVector2Array( 0.048645, 49.7698, -50.5407, 24.3427, -50.435, 6.49844, -0.0381775, -21.5348, 50.3731, 6.3318, 49.8434, 25.667 )

[node name="Vents" type="Sprite" parent="."]
modulate = Color( 1.35294, 0.682353, 0.235294, 0 )
position = Vector2( -28, -12.3179 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 242, 282, 20, 22 )

[node name="IdleIndicator" type="Sprite" parent="."]
modulate = Color( 0.572549, 1.4, 0.701961, 0 )
position = Vector2( -32.6917, -42.4048 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 252, 263, 12, 12 )

[node name="WorkIndicator" type="Sprite" parent="."]
modulate = Color( 1.70196, 0.564706, 0.627451, 0 )
position = Vector2( -21.888, -36.9328 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 252, 263, 12, 12 )

[node name="Dial" type="Node2D" parent="."]
position = Vector2( -7.68111, -29.1436 )

[node name="Dial" type="Sprite" parent="Dial"]
position = Vector2( -0.476185, 1.42094 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 270, 276, 3, 4 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 2, 1.07, 0.08, 1 )
position = Vector2( -28.8214, -12.7064 )
emitting = false
lifetime = 0.5
visibility_rect = Rect2( -36.2296, -9.99514, 45.9992, 40.6713 )
process_material = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Powered = SubResource( 4 )
anims/SETUP = SubResource( 5 )
anims/Shutdown = SubResource( 6 )
anims/Work = SubResource( 7 )
[connection signal="received_power" from="PowerReceiver" to="." method="_on_PowerReceiver_received_power"]
[connection signal="work_accomplished" from="WorkComponent" to="." method="_on_WorkComponent_work_accomplished"]
[connection signal="work_done" from="WorkComponent" to="." method="_on_WorkComponent_work_done"]
[connection signal="work_enabled_changed" from="WorkComponent" to="." method="_on_WorkComponent_work_enabled_changed"]
[connection signal="gui_opened" from="GUIComponent" to="." method="_on_GUIComponent_gui_opened"]
[connection signal="gui_status_changed" from="GUIComponent" to="." method="_on_GUIComponent_gui_status_changed"]
